// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`System Lifecycle Golden Tests > Scenario 1: Organic Growth with Huge Tool Output & Images 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "[Continuing from previous AI thoughts...]",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Nice diagram.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Can we refactor?",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Yes we can.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "[Multi-Modal Blob (image/png, 0.01MB) degraded to text to preserve context window. Saved to: <MOCKED_DIR>]",
        },
        {
          "text": "<MOCKED_STATE_SNAPSHOT_SUMMARY>",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 17,
      "tokensBeforeBackground": 17,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 34,
      "tokensBeforeBackground": 34,
      "turnIndex": 1,
    },
    {
      "tokensAfterBackground": 327,
      "tokensBeforeBackground": 20172,
      "turnIndex": 2,
    },
    {
      "tokensAfterBackground": 393,
      "tokensBeforeBackground": 23197,
      "turnIndex": 3,
    },
    {
      "tokensAfterBackground": 411,
      "tokensBeforeBackground": 23215,
      "turnIndex": 4,
    },
  ],
}
`;

exports[`System Lifecycle Golden Tests > Scenario 2: Under Budget (No Modifications) 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "System Instructions",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Ack.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Hello!",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Hi, how can I help?",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Please continue.",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 17,
      "tokensBeforeBackground": 17,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 34,
      "tokensBeforeBackground": 34,
      "turnIndex": 1,
    },
  ],
}
`;

exports[`System Lifecycle Golden Tests > Scenario 3: Async-Driven Background GC 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Please continue.",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 42,
      "tokensBeforeBackground": 42,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 84,
      "tokensBeforeBackground": 84,
      "turnIndex": 1,
    },
    {
      "tokensAfterBackground": 126,
      "tokensBeforeBackground": 126,
      "turnIndex": 2,
    },
  ],
}
`;
